Πέτσα/3/pi_parser.output
Terminals unused in grammar

    KW_NIL


State 155 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: decl_list mult_func KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'
    2        | decl_list KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'
    3        | mult_func KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'
    4        | KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'

    5 decl_list: mult_const
    6          | mult_var
    7          | mult_const mult_var

    8 mult_var: mult_var decl_var
    9         | decl_var

   10 decl_var: KW_VAR decl_var_list data_type ';'

   11 decl_var_list: item
   12              | IDENTIFIER
   13              | decl_var_list ',' item
   14              | decl_var_list ',' IDENTIFIER

   15 mult_const: mult_const decl_const
   16           | decl_const

   17 decl_const: KW_CONST decl_const_list data_type ';'

   18 decl_const_list: item
   19                | decl_const_list ',' item

   20 item: IDENTIFIER '=' expr
   21     | IDENTIFIER '=' basic_expr
   22     | decl_array '=' expr
   23     | decl_array '=' basic_expr

   24 decl_array: IDENTIFIER '[' INTEGER ']'

   25 decl_array_item: '[' INTEGER ']' IDENTIFIER

   26 mult_func: mult_func decl_func
   27          | decl_func

   28 decl_func: KW_FUNC IDENTIFIER '(' decl_func_list ')' function_data_type '{' func_body '}' ';'

   29 decl_func_list: IDENTIFIER function_data_type
   30               | decl_func_list ',' IDENTIFIER function_data_type

   31 data_type: KW_INT
   32          | KW_STRING
   33          | KW_REAL
   34          | KW_BOOL

   35 function_data_type: data_type
   36                   | '[' ']' data_type

   37 logical_expr: arithmetic_expr
   38             | '(' logical_expr ')'
   39             | logical_expr EQ logical_expr
   40             | logical_expr '>' logical_expr
   41             | logical_expr GEQ logical_expr
   42             | logical_expr '<' logical_expr
   43             | logical_expr SEQ logical_expr
   44             | logical_expr UNEQ logical_expr
   45             | KW_NOT logical_expr
   46             | logical_expr KW_AND logical_expr
   47             | logical_expr KW_OR logical_expr

   48 arithmetic_expr: basic_expr
   49                | func_call
   50                | arithmetic_expr '+' arithmetic_expr
   51                | arithmetic_expr '-' arithmetic_expr
   52                | arithmetic_expr '*' arithmetic_expr
   53                | arithmetic_expr '/' arithmetic_expr
   54                | arithmetic_expr '%' arithmetic_expr
   55                | arithmetic_expr OP_POWER arithmetic_expr
   56                | '(' arithmetic_expr ')'

   57 basic_expr: IDENTIFIER
   58           | INTEGER
   59           | REAL
   60           | '+' basic_expr
   61           | '-' basic_expr

   62 expr: STRING
   63     | KW_TRUE
   64     | KW_FALSE

   65 assignement: IDENTIFIER '=' logical_expr ';'
   66            | IDENTIFIER '=' expr ';'
   67            | decl_array_item '=' logical_expr
   68            | decl_array_item '=' expr

   69 function_expr: logical_expr
   70              | expr
   71              | function_expr ',' expr
   72              | function_expr ',' logical_expr
   73              | %empty

   74 func_call: IDENTIFIER '(' function_expr ')'

   75 func_body: body KW_RETURN logical_expr ';'
   76          | body KW_RETURN ';'

   77 body: %empty
   78     | body decl_var
   79     | body decl_const
   80     | body assignement
   81     | body if_command
   82     | body for_command
   83     | body while_command
   84     | body func_call ';'

   85 complex_commands: %empty
   86                 | complex_commands decl_var
   87                 | complex_commands decl_const
   88                 | complex_commands assignement
   89                 | complex_commands KW_BREAK ';'
   90                 | complex_commands KW_CONTINUE ';'
   91                 | complex_commands if_command
   92                 | complex_commands for_command
   93                 | complex_commands while_command
   94                 | complex_commands func_call ';'

   95 if_expr: KW_TRUE
   96        | KW_FALSE
   97        | assignement
   98        | logical_expr

   99 if_command: KW_IF '(' if_expr ')' '{' complex_commands '}' ';'
  100           | KW_IF '(' if_expr ')' assignement
  101           | KW_IF '(' if_expr ')' func_call
  102           | KW_IF '(' if_expr ')' KW_BREAK ';'
  103           | KW_IF '(' if_expr ')' KW_CONTINUE ';'
  104           | KW_IF '(' if_expr ')' '{' complex_commands '}' ';' else_command
  105           | KW_IF '(' if_expr ')' assignement else_command
  106           | KW_IF '(' if_expr ')' func_call else_command
  107           | KW_IF '(' if_expr ')' KW_BREAK ';' else_command
  108           | KW_IF '(' if_expr ')' KW_CONTINUE ';' else_command

  109 else_command: KW_ELSE assignement ';'
  110             | KW_ELSE func_call
  111             | KW_ELSE '{' complex_commands '}' ';'
  112             | KW_ELSE KW_BREAK ';'
  113             | KW_ELSE KW_CONTINUE ';'
  114             | KW_ELSE if_command

  115 for_command: KW_FOR '(' assignement ';' if_expr ';' assignement ')' '{' complex_commands '}'
  116            | KW_FOR '(' assignement ';' if_expr ';' assignement ')' assignement ';'
  117            | KW_FOR '(' assignement ';' if_expr ';' assignement ')' func_call ';'
  118            | KW_FOR '(' assignement ';' if_expr ';' assignement ')' KW_BREAK ';'
  119            | KW_FOR '(' assignement ';' if_expr ';' assignement ')' KW_CONTINUE ';'
  120            | KW_FOR '(' assignement ';' ';' assignement ')' '{' complex_commands '}'
  121            | KW_FOR '(' assignement ';' ';' assignement ')' assignement ';'
  122            | KW_FOR '(' assignement ';' ';' assignement ')' func_call ';'
  123            | KW_FOR '(' assignement ';' ';' assignement ')' KW_BREAK ';'
  124            | KW_FOR '(' assignement ';' ';' assignement ')' KW_CONTINUE ';'

  125 while_command: KW_WHILE '(' if_expr ')' '{' complex_commands '}' ';'
  126              | KW_WHILE '(' if_expr ')' assignement ';'
  127              | KW_WHILE '(' if_expr ')' func_call ';'
  128              | KW_WHILE '(' if_expr ')' KW_CONTINUE ';'
  129              | KW_WHILE '(' if_expr ')' KW_BREAK ';'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 54
    '(' (40) 1 2 3 4 28 38 56 74 99 100 101 102 103 104 105 106 107 108 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129
    ')' (41) 1 2 3 4 28 38 56 74 99 100 101 102 103 104 105 106 107 108 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129
    '*' (42) 52
    '+' (43) 50 60
    ',' (44) 13 14 19 30 71 72
    '-' (45) 51 61
    '/' (47) 53
    ';' (59) 1 2 3 4 10 17 28 65 66 75 76 84 89 90 94 99 102 103 104 107 108 109 111 112 113 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129
    '<' (60) 42
    '=' (61) 20 21 22 23 65 66 67 68
    '>' (62) 40
    '[' (91) 24 25 36
    ']' (93) 24 25 36
    '{' (123) 1 2 3 4 28 99 104 111 115 120 125
    '}' (125) 1 2 3 4 28 99 104 111 115 120 125
    error (256)
    STRING <crepr> (258) 62
    IDENTIFIER <crepr> (259) 12 14 20 21 24 25 28 29 30 57 65 66 74
    REAL <crepr> (260) 59
    INTEGER <crepr> (261) 24 25 58
    KW_BEGIN (262) 1 2 3 4
    KW_FUNC (263) 1 2 3 4 28
    KW_INT (264) 31
    KW_REAL (265) 33
    KW_BOOL (266) 34
    KW_TRUE (267) 63 95
    KW_STRING (268) 32
    KW_FALSE (269) 64 96
    KW_VAR (270) 10
    KW_CONST (271) 17
    KW_IF (272) 99 100 101 102 103 104 105 106 107 108
    KW_ELSE (273) 109 110 111 112 113 114
    KW_WHILE (274) 125 126 127 128 129
    KW_BREAK (275) 89 102 107 112 118 123 129
    KW_CONTINUE (276) 90 103 108 113 119 124 128
    KW_NIL (277)
    KW_AND (278) 46
    KW_OR (279) 47
    KW_NOT (280) 45
    KW_RETURN (281) 75 76
    KW_FOR (282) 115 116 117 118 119 120 121 122 123 124
    OP_POWER (283) 55
    EQ (284) 39
    GEQ (285) 41
    UNEQ (286) 44
    SEQ (287) 43


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program (50)
        on left: 1 2 3 4
        on right: 0
    decl_list <crepr> (51)
        on left: 5 6 7
        on right: 1 2
    mult_var <crepr> (52)
        on left: 8 9
        on right: 6 7 8
    decl_var <crepr> (53)
        on left: 10
        on right: 8 9 78 86
    decl_var_list <crepr> (54)
        on left: 11 12 13 14
        on right: 10 13 14
    mult_const <crepr> (55)
        on left: 15 16
        on right: 5 7 15
    decl_const <crepr> (56)
        on left: 17
        on right: 15 16 79 87
    decl_const_list <crepr> (57)
        on left: 18 19
        on right: 17 19
    item <crepr> (58)
        on left: 20 21 22 23
        on right: 11 13 18 19
    decl_array <crepr> (59)
        on left: 24
        on right: 22 23
    decl_array_item <crepr> (60)
        on left: 25
        on right: 67 68
    mult_func <crepr> (61)
        on left: 26 27
        on right: 1 3 26
    decl_func <crepr> (62)
        on left: 28
        on right: 26 27
    decl_func_list <crepr> (63)
        on left: 29 30
        on right: 28 30
    data_type <crepr> (64)
        on left: 31 32 33 34
        on right: 10 17 35 36
    function_data_type <crepr> (65)
        on left: 35 36
        on right: 28 29 30
    logical_expr <crepr> (66)
        on left: 37 38 39 40 41 42 43 44 45 46 47
        on right: 38 39 40 41 42 43 44 45 46 47 65 67 69 72 75 98
    arithmetic_expr <crepr> (67)
        on left: 48 49 50 51 52 53 54 55 56
        on right: 37 50 51 52 53 54 55 56
    basic_expr <crepr> (68)
        on left: 57 58 59 60 61
        on right: 21 23 48 60 61
    expr <crepr> (69)
        on left: 62 63 64
        on right: 20 22 66 68 70 71
    assignement <crepr> (70)
        on left: 65 66 67 68
        on right: 80 88 97 100 105 109 115 116 117 118 119 120 121 122 123 124 126
    function_expr <crepr> (71)
        on left: 69 70 71 72 73
        on right: 71 72 74
    func_call <crepr> (72)
        on left: 74
        on right: 49 84 94 101 106 110 117 122 127
    func_body <crepr> (73)
        on left: 75 76
        on right: 28
    body <crepr> (74)
        on left: 77 78 79 80 81 82 83 84
        on right: 1 2 3 4 75 76 78 79 80 81 82 83 84
    complex_commands <crepr> (75)
        on left: 85 86 87 88 89 90 91 92 93 94
        on right: 86 87 88 89 90 91 92 93 94 99 104 111 115 120 125
    if_expr <crepr> (76)
        on left: 95 96 97 98
        on right: 99 100 101 102 103 104 105 106 107 108 115 116 117 118 119 125 126 127 128 129
    if_command <crepr> (77)
        on left: 99 100 101 102 103 104 105 106 107 108
        on right: 81 91 114
    else_command <crepr> (78)
        on left: 109 110 111 112 113 114
        on right: 104 105 106 107 108
    for_command <crepr> (79)
        on left: 115 116 117 118 119 120 121 122 123 124
        on right: 82 92
    while_command <crepr> (80)
        on left: 125 126 127 128 129
        on right: 83 93


State 0

    0 $accept: . program $end
    1 program: . decl_list mult_func KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'
    2        | . decl_list KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'
    3        | . mult_func KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'
    4        | . KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'
    5 decl_list: . mult_const
    6          | . mult_var
    7          | . mult_const mult_var
    8 mult_var: . mult_var decl_var
    9         | . decl_var
   10 decl_var: . KW_VAR decl_var_list data_type ';'
   15 mult_const: . mult_const decl_const
   16           | . decl_const
   17 decl_const: . KW_CONST decl_const_list data_type ';'
   26 mult_func: . mult_func decl_func
   27          | . decl_func
   28 decl_func: . KW_FUNC IDENTIFIER '(' decl_func_list ')' function_data_type '{' func_body '}' ';'

    KW_FUNC   shift, and go to state 1
    KW_VAR    shift, and go to state 2
    KW_CONST  shift, and go to state 3

    program     go to state 4
    decl_list   go to state 5
    mult_var    go to state 6
    decl_var    go to state 7
    mult_const  go to state 8
    decl_const  go to state 9
    mult_func   go to state 10
    decl_func   go to state 11


State 1

    4 program: KW_FUNC . KW_BEGIN '(' ')' '{' body '}' ';'
   28 decl_func: KW_FUNC . IDENTIFIER '(' decl_func_list ')' function_data_type '{' func_body '}' ';'

    IDENTIFIER  shift, and go to state 12
    KW_BEGIN    shift, and go to state 13


State 2

   10 decl_var: KW_VAR . decl_var_list data_type ';'
   11 decl_var_list: . item
   12              | . IDENTIFIER
   13              | . decl_var_list ',' item
   14              | . decl_var_list ',' IDENTIFIER
   20 item: . IDENTIFIER '=' expr
   21     | . IDENTIFIER '=' basic_expr
   22     | . decl_array '=' expr
   23     | . decl_array '=' basic_expr
   24 decl_array: . IDENTIFIER '[' INTEGER ']'

    IDENTIFIER  shift, and go to state 14

    decl_var_list  go to state 15
    item           go to state 16
    decl_array     go to state 17


State 3

   17 decl_const: KW_CONST . decl_const_list data_type ';'
   18 decl_const_list: . item
   19                | . decl_const_list ',' item
   20 item: . IDENTIFIER '=' expr
   21     | . IDENTIFIER '=' basic_expr
   22     | . decl_array '=' expr
   23     | . decl_array '=' basic_expr
   24 decl_array: . IDENTIFIER '[' INTEGER ']'

    IDENTIFIER  shift, and go to state 18

    decl_const_list  go to state 19
    item             go to state 20
    decl_array       go to state 17


State 4

    0 $accept: program . $end

    $end  shift, and go to state 21


State 5

    1 program: decl_list . mult_func KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'
    2        | decl_list . KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'
   26 mult_func: . mult_func decl_func
   27          | . decl_func
   28 decl_func: . KW_FUNC IDENTIFIER '(' decl_func_list ')' function_data_type '{' func_body '}' ';'

    KW_FUNC  shift, and go to state 22

    mult_func  go to state 23
    decl_func  go to state 11


State 6

    6 decl_list: mult_var .  [KW_FUNC]
    8 mult_var: mult_var . decl_var
   10 decl_var: . KW_VAR decl_var_list data_type ';'

    KW_VAR  shift, and go to state 2

    $default  reduce using rule 6 (decl_list)

    decl_var  go to state 24


State 7

    9 mult_var: decl_var .

    $default  reduce using rule 9 (mult_var)


State 8

    5 decl_list: mult_const .  [KW_FUNC]
    7          | mult_const . mult_var
    8 mult_var: . mult_var decl_var
    9         | . decl_var
   10 decl_var: . KW_VAR decl_var_list data_type ';'
   15 mult_const: mult_const . decl_const
   17 decl_const: . KW_CONST decl_const_list data_type ';'

    KW_VAR    shift, and go to state 2
    KW_CONST  shift, and go to state 3

    $default  reduce using rule 5 (decl_list)

    mult_var    go to state 25
    decl_var    go to state 7
    decl_const  go to state 26


State 9

   16 mult_const: decl_const .

    $default  reduce using rule 16 (mult_const)


State 10

    3 program: mult_func . KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'
   26 mult_func: mult_func . decl_func
   28 decl_func: . KW_FUNC IDENTIFIER '(' decl_func_list ')' function_data_type '{' func_body '}' ';'

    KW_FUNC  shift, and go to state 27

    decl_func  go to state 28


State 11

   27 mult_func: decl_func .

    $default  reduce using rule 27 (mult_func)


State 12

   28 decl_func: KW_FUNC IDENTIFIER . '(' decl_func_list ')' function_data_type '{' func_body '}' ';'

    '('  shift, and go to state 29


State 13

    4 program: KW_FUNC KW_BEGIN . '(' ')' '{' body '}' ';'

    '('  shift, and go to state 30


State 14

   12 decl_var_list: IDENTIFIER .  [KW_INT, KW_REAL, KW_BOOL, KW_STRING, ',']
   20 item: IDENTIFIER . '=' expr
   21     | IDENTIFIER . '=' basic_expr
   24 decl_array: IDENTIFIER . '[' INTEGER ']'

    '='  shift, and go to state 31
    '['  shift, and go to state 32

    $default  reduce using rule 12 (decl_var_list)


State 15

   10 decl_var: KW_VAR decl_var_list . data_type ';'
   13 decl_var_list: decl_var_list . ',' item
   14              | decl_var_list . ',' IDENTIFIER
   31 data_type: . KW_INT
   32          | . KW_STRING
   33          | . KW_REAL
   34          | . KW_BOOL

    KW_INT     shift, and go to state 33
    KW_REAL    shift, and go to state 34
    KW_BOOL    shift, and go to state 35
    KW_STRING  shift, and go to state 36
    ','        shift, and go to state 37

    data_type  go to state 38


State 16

   11 decl_var_list: item .

    $default  reduce using rule 11 (decl_var_list)


State 17

   22 item: decl_array . '=' expr
   23     | decl_array . '=' basic_expr

    '='  shift, and go to state 39


State 18

   20 item: IDENTIFIER . '=' expr
   21     | IDENTIFIER . '=' basic_expr
   24 decl_array: IDENTIFIER . '[' INTEGER ']'

    '='  shift, and go to state 31
    '['  shift, and go to state 32


State 19

   17 decl_const: KW_CONST decl_const_list . data_type ';'
   19 decl_const_list: decl_const_list . ',' item
   31 data_type: . KW_INT
   32          | . KW_STRING
   33          | . KW_REAL
   34          | . KW_BOOL

    KW_INT     shift, and go to state 33
    KW_REAL    shift, and go to state 34
    KW_BOOL    shift, and go to state 35
    KW_STRING  shift, and go to state 36
    ','        shift, and go to state 40

    data_type  go to state 41


State 20

   18 decl_const_list: item .

    $default  reduce using rule 18 (decl_const_list)


State 21

    0 $accept: program $end .

    $default  accept


State 22

    2 program: decl_list KW_FUNC . KW_BEGIN '(' ')' '{' body '}' ';'
   28 decl_func: KW_FUNC . IDENTIFIER '(' decl_func_list ')' function_data_type '{' func_body '}' ';'

    IDENTIFIER  shift, and go to state 12
    KW_BEGIN    shift, and go to state 42


State 23

    1 program: decl_list mult_func . KW_FUNC KW_BEGIN '(' ')' '{' body '}' ';'
   26 mult_func: mult_func . decl_func
   28 decl_func: . KW_FUNC IDENTIFIER '(' decl_func_list ')' function_data_type '{' func_body '}' ';'

    KW_FUNC  shift, and go to state 43

    decl_func  go to state 28


State 24

    8 mult_var: mult_var decl_var .

    $default  reduce using rule 8 (mult_var)


State 25

    7 decl_list: mult_const mult_var .  [KW_FUNC]
    8 mult_var: mult_var . decl_var
   10 decl_var: . KW_VAR decl_var_list data_type ';'

    KW_VAR  shift, and go to state 2

    $default  reduce using rule 7 (decl_list)

    decl_var  go to state 24


State 26

   15 mult_const: mult_const decl_const .

    $default  reduce using rule 15 (mult_const)


State 27

    3 program: mult_func KW_FUNC . KW_BEGIN '(' ')' '{' body '}' ';'
   28 decl_func: KW_FUNC . IDENTIFIER '(' decl_func_list ')' function_data_type '{' func_body '}' ';'

    IDENTIFIER  shift, and go to state 12
    KW_BEGIN    shift, and go to state 44


State 28

   26 mult_func: mult_func decl_func .

    $default  reduce using rule 26 (mult_func)


State 29

   28 decl_func: KW_FUNC IDENTIFIER '(' . decl_func_list ')' function_data_type '{' func_body '}' ';'
   29 decl_func_list: . IDENTIFIER function_data_type
   30               | . decl_func_list ',' IDENTIFIER function_data_type

    IDENTIFIER  shift, and go to state 45

    decl_func_list  go to state 46


State 30
